--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "myproject",
+  "name": "hapijs-api-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "API server implementation example for GET requests",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "monica.piras.info@gmail.com",
+  "license": "MIT",
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
     "@hapi/inert": "^6.0.3",
