--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API server implementation example for GET requests",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "monica.piras.info@gmail.com",
@@ -12,5 +13,8 @@
     "@hapi/hapi": "^20.1.0",
     "@hapi/inert": "^6.0.3",
     "inert": "^5.1.3"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
